--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -128,6 +128,8 @@
     placement: 'top'
   });
  
+ var STATIC_URL = '{{STATIC_URL}}';
+ 
 // Create a PHTC namespace
 // and give it a getURL function
   PHTC = {};
