--- a/phtc/templates/logic_model/subtemplates/help_box2.html
+++ b/phtc/templates/logic_model/subtemplates/help_box2.html
@@ -5,6 +5,6 @@
 	 	<div class="popover-content">
 		  <%=help_body%>
 		</div>
-		  <div class="pull-center"><div class="btn btn-primary">Close</div></div>
+		  <div class="pull-center"><div class="btn btn-logicmodel btn-success">Close</div></div>
 	</div>
 </script>
