Improved functionality and content call for all the popup help boxes

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -68,6 +68,7 @@
 {% endblock %}
 
     <div class="content">
+        <div class="help-overlay"></div>
         <div class="row">
             <div class="span3" id="sidebarleft">
                 {% block sidebar %}{% endblock %}
