--- a/media/css/logic_model2.css
+++ b/media/css/logic_model2.css
@@ -44,12 +44,6 @@ span.backbone_column_span {
     z-index: 300;
 }
 
-.help_box .modal-header h3 {
-    margin: 0;
-    padding: 0;
-    font-size: 18px;
-}
-
 .help-alert {
     width: 400px;
     height: 400px;
@@ -234,21 +228,8 @@ div.add_a_row_button.visible {
 
 .wipe-table-button-div {
     display: none;
-    position: absolute;
-    top: 160px;
-    left: 0;
-    width: 880px;
     z-index: 300;
-    width: auto;
-    height: 300px;
-    background-color: #fff;
-    border: 1px solid #999;
-  -webkit-border-radius: 3px;
-     -moz-border-radius: 3px;
-          border-radius: 3px;
-  -webkit-box-shadow: 0 0 50px #666666;
-     -moz-box-shadow: 0 0 50px #666666;
-          box-shadow: 0 0 50px #666666;
+    margin-left: -350px;
 }
 
 .inactive_box {
@@ -561,22 +542,6 @@ div.table-toolbar {
 	position: relative;
 }
 
-/*.activity-progress .step span:before {
-	opacity: 0;
-	content: "\2713";
-	position: absolute;
-	top: -2px;
-	left: -20px;
-}
-
-.activity-progress .step.done span:before {
-	opacity: 1;
-	-webkit-transition: opacity 0.3s ease 0.5s;
-	-moz-transition: opacity 0.3s ease 0.5s;
-	-ms-transition: opacity 0.3s ease 0.5s;
-	transition: opacity 0.3s ease 0.5s;
-}*/
-
 .activity-progress .step.current {
 	color: #fff;
 	background-color: #23468c;
@@ -586,12 +551,19 @@ div.table-toolbar {
 	border-left: 17px solid #23468c;	
 }
 
+.help-header h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 150%;
+}
+
 .pull-center {
     text-align: center;
 }
 
-.loading-overlay
-{
+.loading-overlay,
+.help-overlay {
 	position: absolute;
 	display: block;
 	top: 0;
@@ -601,4 +573,18 @@ div.table-toolbar {
 	width: 100%;
 	font-size: larger;
 	font-weight: bold;
+	z-index: 1000;
+}
+
+.help-overlay {
+	position: fixed;
+	display: none;
+	top: 0;
+	left: 0;
+	background-color: #000;
+	height: 100%;
+	width: 100%;
+	z-index: 200;
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
 }
