--- a/phtc/templates/logic_model/subtemplates/help_box2.html
+++ b/phtc/templates/logic_model/subtemplates/help_box2.html
@@ -1,12 +1,14 @@
 <div class="modal help_box">this is just a placeholder.</div>
 <script type="text/template" id="logic-model-help-box">
-    <div class="modal-header">
+    <div class="modal-header help-header">
         <button class="close">×</button>
-        <h3>Modal header</h3>
+        <h3><%=help_title%> column</h3>
     </div>
     <div class="modal-body">
-        <p><%=help_title%></p>
-        <div><%=help_body%></div>
+        <div>
+        <%=help_meaning%>
+        <%=help_body%>
+        </div>
     </div>
     <div class="modal-footer">
         <div class="btn btn-logicmodel btn-success">Close</div>
