--- a/phtc/templates/logic_model/subtemplates/table2.html
+++ b/phtc/templates/logic_model/subtemplates/table2.html
@@ -44,7 +44,7 @@
 
 </div><!-- /.scenario-step-stage -->
          
-<div class="table-toolbar{% comment %}wipe-table-div{% endcomment %}">
+<div class="table-toolbar">
     <div class="previous_phase btn-logicmodel btn-info"><i class="icon-arrow-left icon-white"></i> Back a step</div>
     <div class="wipe-table-button btn-logicmodel btn-info"><i class="icon-trash icon-white"></i> Clear table</div>
     <!-- <div class="change_scenario btn-logicmodel btn-info"><i class="icon-refresh icon-white"></i> Switch scenario</div>-->
@@ -52,14 +52,23 @@
     <div class ="show_expert_logic_model_link_div btn-logicmodel btn-info">
         <i class="icon-file icon-white"></i> <a target="_blank" href="" class="show_expert_logic_model_link">Show expert logic model</a>
     </div>
-    <div class="wipe-table-button-div alert">
-    <h3>Are you sure you want to clear the table?</h3> This will permanently erase everything you typed in the boxes.
-    <div class = "wipe-table-confirm-button btn-logicmodel btn-danger">
-    Yes, I'm sure.
-    </div>
-    <div class = "wipe-table-cancel-button btn-logicmodel btn-success">
-    No.
-    </div>
+    <div class="modal wipe-table-button-div">
+        <div class="modal-header help-header">
+            <h3>Are you sure you want to clear the table?</h3>
+        </div>
+        <div class="modal-body">
+            <div>
+            This will permanently erase everything you typed in the boxes.
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class = "wipe-table-confirm-button btn-logicmodel btn-danger">
+            Yes, I'm sure
+            </div>
+            <div class = "wipe-table-cancel-button btn-logicmodel btn-success">
+            No
+            </div>
+        </div>
     </div>
 </div>
 
