--- a/phtc/templates/logic_model/logic_model2.html
+++ b/phtc/templates/logic_model/logic_model2.html
@@ -1,7 +1,8 @@
 <div class="loading-overlay">Loading...</div>
 <div class="logic-model-container">
 	<div id="phase_container">
-
+<div class="phtc_print_logo print_only"><img src="{{STATIC_URL}}img/region2phtc-logo_horizontal.png" /></div>
+        <h3 class="print_only">Building your own logic model</h3>
 		<div class="scenario-list-stage">
 			<div class="logic-model-game-phase-name">Name of this phase of the game.</div>
 			<div class="logic-model-game-phase-instructions">Instructions</div>
