--- a/phtc/templates/logic_model/subtemplates/table2.html
+++ b/phtc/templates/logic_model/subtemplates/table2.html
@@ -91,7 +91,7 @@
 </div>
 
 
-
+<div class="print-break clearfix"></div>
 
 <!-- the whole table goes here: -->
 <div class="logic-model-columns clearfix"></div>
